policies/seccomp-profile-restricted/ephemeralcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-restricted-namespace-optout-warn
spec:
  policyName: check-seccomp-profile-ephemeralcontainers-restricted
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/warn
        operator: In
        values:
        - restricted
      - key: seccomp-profile-ephemeralcontainers-restricted.pss.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-restricted-namespace-optin-warn
spec:
  policyName: check-seccomp-profile-ephemeralcontainers-restricted
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-ephemeralcontainers-restricted.pss.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-restricted-namespace-optout-audit
spec:
  policyName: check-seccomp-profile-ephemeralcontainers-restricted
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/audit
        operator: In
        values:
        - restricted
      - key: seccomp-profile-ephemeralcontainers-restricted.pss.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-restricted-namespace-optin-audit
spec:
  policyName: check-seccomp-profile-ephemeralcontainers-restricted
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-ephemeralcontainers-restricted.pss.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-restricted-namespace-optout-deny
spec:
  policyName: check-seccomp-profile-ephemeralcontainers-restricted
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.kolteq.com/enforce
        operator: In
        values:
        - restricted
      - key: seccomp-profile-ephemeralcontainers-restricted.pss.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: check-seccomp-profile-ephemeralcontainers-restricted-namespace-optin-deny
spec:
  policyName: check-seccomp-profile-ephemeralcontainers-restricted
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: seccomp-profile-ephemeralcontainers-restricted.pss.kolteq.com/enforce
        operator: In
        values:
        - 'true'
